src/minibude-cuda/build.log
nvcc  -std=c++14 -Xcompiler -Wall -arch=sm_89 -O3 -c main.cu -o main.o
main.cu(23): error: incomplete type "std::array<std::vector<float, std::allocator<float>>, 6UL>" is not allowed
    std::array<std::vector<float>, 6> poses;
                                      ^

1 error detected in the compilation of "main.cu".
make: *** [Makefile:52: main.o] Error 2
